--- a/HomeCloud_AOS/res/values/dimens.xml
+++ b/HomeCloud_AOS/res/values/dimens.xml
@@ -4,4 +4,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <!-- Welcome Activity -->
+    <dimen name="welcome">76dp</dimen>
+    <dimen name="status">11dp</dimen>
+
 </resources>
